Replace my library screen with my profile screen

--- a/Resources/Strings/Profile.strings
+++ b/Resources/Strings/Profile.strings
@@ -1,7 +1,7 @@
 /* 
-  Library.strings
+  Profile.strings
   Kitsune
 */
 
-"title" = "MY LIBRARY";
+"title" = "MY PROFILE";
 "logout.button.title" = "Logout";
