Add error handling, add email / password validation on login

--- a/Resources/Strings/AnimeList.strings
+++ b/Resources/Strings/AnimeList.strings
@@ -5,3 +5,6 @@
 
 "title" = "TOP ANIME";
 "search.bar.placeholder" = "Search for anime";
+"could.not.load" = "Could not load content. Please try again.";
+"retry" = "RETRY";
+"empty.results" = "Could not find anything.";
